# drope-activations

./: .gitignore  .gitmodules  CLAUDE.md  README.md  custom_models  pyproject.toml  requirements.txt
configs/: evaluation.yaml  experiments.yaml  models.yaml
results/: .gitkeep  FINDINGS.md  attention_animation_data.json  compile_figures.sh  figures.tex
results/detailed_report/: detailed_report_20260118_133123.txt
results/disruption/: disruption_results_20260118_140909.json  disruption_results_20260118_140945.json
results/disruption_rigorous/: rigorous_results_20260118_141812.json
results/knowledge_tests/: jin_tests_final_20260119_172709.json  knowledge_tests_20260118_230437.json  knowledge_tests_20260118_233356.json  knowledge_tests_20260119_110243.json  knowledge_tests_final_20260119_143932.json
results/llama_comparison/: comparison_results_20260118_132231.json
results/phase_metrics/: PHASE_FINDINGS.md  drope_attention_matrices.npz  rope_attention_matrices.npz  rope_vs_drope_phase_metrics.json
scripts/: analyze_near_misses.py  attention_animation.py  compare_smollm.py  create_attention_figures.py  create_bos_write_figures.py  create_context_scaling_figures.py  create_crosslayer_figures.py  create_drope_model.py  create_extended_context_figures.py  create_final_figures.py  create_findings_figures.py  create_jin_figures.py  create_layer1_content_figures.py  create_phase_figures.py  create_science_plots.py  extract_attention_data.py  finish_jin_tests.py  fix_drope_sink_rates.py  generate_report.py  rerun_drope_metrics.py  run_analysis_comparison.py  run_attention_analysis.py  run_bos_write_analysis.py  run_context_scaling.py  run_crosslayer_balance.py  run_disruption_experiment.py  run_disruption_rigorous.py  run_experiment.py  run_functional_tests.py  run_jin_tests.py  run_layer1_ablation.py  run_layer1_content_analysis.py  run_llama_comparison.py  run_massive_values_rigorous.py  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_phase4.sh  run_phase_metrics.py  test_extended_context.py  (+3 more)
src/: __init__.py
src/drope/: __init__.py  conversion.py  (+1 more)
(+14 files in other folders)
